[tool.poetry]
name = "twitter-image-collector"
version = "1.1.0"
description = ""
authors = ["Sakurai <K.Sakurai_2000@outlook.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
tweepy = "4.0.1"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"